--- a/Team_Purple/app/src/main/res/layout/activity_setting.xml
+++ b/Team_Purple/app/src/main/res/layout/activity_setting.xml
@@ -10,185 +10,184 @@
         android:id="@+id/tvToolBarTitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingBottom="@dimen/dp_12"
+        android:gravity="center"
+        android:padding="@dimen/dp_20"
         android:paddingStart="@dimen/dp_20"
         android:paddingTop="@dimen/dp_20"
+        android:paddingBottom="@dimen/dp_12"
         android:text="@string/text_AppSetting"
-        android:background="@color/black"
-        android:padding="@dimen/dp_20"
+        android:textColor="@color/black"
         android:textSize="@dimen/sp_22"
-        android:gravity="center"
         android:textStyle="bold"
-        android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/imgback"
         android:layout_width="wrap_content"
-        android:layout_marginTop="@dimen/dp_20"
-        android:layout_marginLeft="@dimen/dp_20"
         android:layout_height="wrap_content"
-        android:paddingBottom="@dimen/dp_12"
+        android:layout_marginLeft="@dimen/dp_20"
+        android:layout_marginTop="@dimen/dp_20"
         android:background="@drawable/ic_arrow"
+        android:paddingBottom="@dimen/dp_12"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
+        android:id="@+id/tvCoummnity"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/text_Community"
-        android:id="@+id/tvCoummnity"
-        app:layout_constraintTop_toBottomOf="@+id/tvToolBarTitle"
-        android:textSize="@dimen/dp_20"
-        android:layout_marginTop="@dimen/dp_40"
         android:layout_marginLeft="@dimen/dp_20"
-        android:layout_marginRight="@dimen/dp_20" />
+        android:layout_marginTop="@dimen/dp_40"
+        android:layout_marginRight="@dimen/dp_20"
+        android:text="@string/text_Community"
+        android:textSize="@dimen/dp_20"
+        app:layout_constraintTop_toBottomOf="@+id/tvToolBarTitle" />
 
     <Button
+        android:id="@+id/btnCoummnityguidelines"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/tvCoummnityguidelines"
-        app:layout_constraintTop_toBottomOf="@+id/tvCoummnity"
+        android:layout_marginLeft="@dimen/dp_20"
+        android:layout_marginTop="@dimen/dp_10"
+        android:layout_marginRight="@dimen/dp_20"
+        android:background="@drawable/rectangle"
+        android:drawableEnd="@drawable/ic_arrow2"
+        android:gravity="start|center_vertical"
+        android:paddingLeft="@dimen/dp_20"
+        android:paddingRight="@dimen/dp_10"
         android:text="@string/text_CommunityGuidelines"
         android:textAllCaps="false"
-        android:gravity="start|center_vertical"
-        android:paddingLeft="@dimen/dp_20"
-        android:layout_marginTop="@dimen/dp_10"
-        android:background="@drawable/rectangle"
-        android:layout_marginLeft="@dimen/dp_20"
-        android:layout_marginRight="@dimen/dp_20" />
-
-    <ImageView
-        android:id="@+id/arrow1"
-        android:layout_width="wrap_content"
-        android:gravity="center_vertical"
-        android:layout_height="wrap_content"
-        android:background="@drawable/ic_arrow1"
-        app:layout_constraintTop_toTopOf="@+id/tvCoummnityguidelines"
-        app:layout_constraintBottom_toBottomOf="@+id/tvCoummnityguidelines"
-        app:layout_constraintEnd_toEndOf="@+id/tvCoummnityguidelines" />
+        app:layout_constraintTop_toBottomOf="@+id/tvCoummnity" />
 
 
     <Button
+        android:id="@+id/btnSafetytips"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/tvSafetytips"
-        app:layout_constraintTop_toBottomOf="@+id/tvCoummnityguidelines"
-        android:text="@string/text_SafetyTips"
-        android:textAllCaps="false"
+        android:layout_marginLeft="@dimen/dp_20"
+        android:layout_marginTop="@dimen/dp_10"
+        android:layout_marginRight="@dimen/dp_20"
+        android:background="@drawable/rectangle"
+        android:drawableEnd="@drawable/ic_arrow2"
         android:gravity="start|center_vertical"
         android:paddingLeft="@dimen/dp_20"
-        android:layout_marginTop="@dimen/dp_10"
-        android:background="@drawable/rectangle"
-        android:layout_marginLeft="@dimen/dp_20"
-        android:layout_marginRight="@dimen/dp_20" />
+        android:paddingRight="@dimen/dp_10"
+        android:text="@string/text_SafetyTips"
+        android:textAllCaps="false"
+        app:layout_constraintTop_toBottomOf="@+id/btnCoummnityguidelines" />
 
     <TextView
         android:id="@+id/tvLegal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/text_Legal"
-        app:layout_constraintTop_toBottomOf="@+id/tvSafetytips"
-        android:textSize="@dimen/dp_20"
-        android:layout_marginTop="@dimen/dp_20"
         android:layout_marginLeft="@dimen/dp_20"
-        android:layout_marginRight="@dimen/dp_20" />
+        android:layout_marginTop="@dimen/dp_20"
+        android:layout_marginRight="@dimen/dp_20"
+        android:text="@string/text_Legal"
+        android:textSize="@dimen/dp_20"
+        app:layout_constraintTop_toBottomOf="@+id/btnSafetytips" />
 
     <Button
+        android:id="@+id/btnPrivacy"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/tvPrivacy"
-        app:layout_constraintTop_toBottomOf="@+id/tvLegal"
+        android:layout_marginLeft="@dimen/dp_20"
+        android:layout_marginTop="@dimen/dp_10"
+        android:layout_marginRight="@dimen/dp_20"
+        android:background="@drawable/rectangle"
+        android:drawableEnd="@drawable/ic_arrow2"
+        android:gravity="start|center_vertical"
+        android:paddingLeft="@dimen/dp_20"
+        android:paddingRight="@dimen/dp_10"
         android:text="@string/text_PrivacyPolicy"
         android:textAllCaps="false"
-        android:gravity="start|center_vertical"
-        android:paddingLeft="@dimen/dp_20"
-        android:layout_marginTop="@dimen/dp_10"
-        android:background="@drawable/rectangle"
-        android:layout_marginLeft="@dimen/dp_20"
-        android:layout_marginRight="@dimen/dp_20" />
+        app:layout_constraintTop_toBottomOf="@+id/tvLegal" />
 
     <Button
+        android:id="@+id/btnTermsofservice"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/tvTermsofservice"
-        app:layout_constraintTop_toBottomOf="@+id/tvPrivacy"
+        android:layout_marginLeft="@dimen/dp_20"
+        android:layout_marginTop="@dimen/dp_10"
+        android:layout_marginRight="@dimen/dp_20"
+        android:background="@drawable/rectangle"
+        android:drawableEnd="@drawable/ic_arrow2"
+        android:gravity="start|center_vertical"
+        android:paddingLeft="@dimen/dp_20"
+        android:paddingRight="@dimen/dp_10"
         android:text="@string/text_Termsofservice"
         android:textAllCaps="false"
-        android:gravity="start|center_vertical"
-        android:paddingLeft="@dimen/dp_20"
-        android:layout_marginTop="@dimen/dp_10"
-        android:background="@drawable/rectangle"
-        android:layout_marginLeft="@dimen/dp_20"
-        android:layout_marginRight="@dimen/dp_20" />
+        app:layout_constraintTop_toBottomOf="@+id/btnPrivacy" />
 
     <Button
+        android:id="@+id/btnLiceness"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/tvLiceness"
-        app:layout_constraintTop_toBottomOf="@+id/tvTermsofservice"
+        android:layout_marginLeft="@dimen/dp_20"
+        android:layout_marginTop="@dimen/dp_10"
+        android:layout_marginRight="@dimen/dp_20"
+        android:background="@drawable/rectangle"
+        android:drawableEnd="@drawable/ic_arrow2"
+        android:gravity="start|center_vertical"
+        android:paddingLeft="@dimen/dp_20"
+        android:paddingRight="@dimen/dp_10"
         android:text="@string/text_Licenses"
         android:textAllCaps="false"
-        android:gravity="start|center_vertical"
-        android:paddingLeft="@dimen/dp_20"
-        android:layout_marginTop="@dimen/dp_10"
-        android:background="@drawable/rectangle"
-        android:layout_marginLeft="@dimen/dp_20"
-        android:layout_marginRight="@dimen/dp_20" />
+        app:layout_constraintTop_toBottomOf="@+id/btnTermsofservice" />
 
     <TextView
+        android:id="@+id/tvSelect"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/text_SelectLanguage"
-        android:id="@+id/tvSelect"
-        app:layout_constraintTop_toBottomOf="@+id/tvLiceness"
-        android:textSize="@dimen/dp_20"
-        android:layout_marginTop="@dimen/dp_20"
         android:layout_marginLeft="@dimen/dp_20"
-        android:layout_marginRight="@dimen/dp_20" />
+        android:layout_marginTop="@dimen/dp_20"
+        android:layout_marginRight="@dimen/dp_20"
+        android:text="@string/text_SelectLanguage"
+        android:textSize="@dimen/dp_20"
+        app:layout_constraintTop_toBottomOf="@+id/btnLiceness" />
 
     <Button
+        android:id="@+id/btnLanguage"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/tvEnglish"
-        app:layout_constraintTop_toBottomOf="@+id/tvSelect"
+        android:layout_marginLeft="@dimen/dp_20"
+        android:layout_marginTop="@dimen/dp_10"
+        android:layout_marginRight="@dimen/dp_20"
+        android:background="@drawable/rectangle"
+        android:gravity="center"
+        android:paddingLeft="@dimen/dp_20"
         android:text="@string/text_English"
         android:textAllCaps="false"
-        android:gravity="start|center_vertical"
-        android:paddingLeft="@dimen/dp_20"
-        android:layout_marginTop="@dimen/dp_10"
-        android:background="@drawable/rectangle"
-        android:layout_marginLeft="@dimen/dp_20"
-        android:layout_marginRight="@dimen/dp_20" />
+        app:layout_constraintTop_toBottomOf="@+id/tvSelect" />
 
     <Button
+        android:id="@+id/btnLogout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/tvLogout"
-        app:layout_constraintTop_toBottomOf="@+id/tvEnglish"
+        android:layout_marginLeft="@dimen/dp_20"
+        android:layout_marginTop="@dimen/dp_10"
+        android:layout_marginRight="@dimen/dp_20"
+        android:background="@drawable/design_bg_needhelp_btn"
+        android:gravity="center"
+        android:paddingLeft="@dimen/dp_20"
         android:text="@string/text_Logout"
         android:textAllCaps="false"
-        android:gravity="center"
-        android:paddingLeft="@dimen/dp_20"
-        android:layout_marginTop="@dimen/dp_10"
-        android:background="@drawable/rectangle"
-        android:layout_marginLeft="@dimen/dp_20"
-        android:layout_marginRight="@dimen/dp_20" />
+        app:layout_constraintTop_toBottomOf="@+id/btnLanguage" />
 
     <Button
+        android:id="@+id/btnAccountDelete"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/tvDelete"
-        app:layout_constraintTop_toBottomOf="@+id/tvLogout"
-        android:text="@string/text_Deleteaccount"
-        android:textAllCaps="false"
+        android:layout_marginLeft="@dimen/dp_20"
+        android:layout_marginTop="@dimen/dp_10"
+        android:layout_marginRight="@dimen/dp_20"
+        android:background="@drawable/design_bg_needhelp_btn"
         android:gravity="center"
         android:paddingLeft="@dimen/dp_20"
-        android:layout_marginTop="@dimen/dp_10"
-        android:background="@drawable/rectangle"
-        android:layout_marginLeft="@dimen/dp_20"
-        android:layout_marginRight="@dimen/dp_20" />
+        android:text="@string/text_Deleteaccount"
+        android:textAllCaps="false"
+        app:layout_constraintTop_toBottomOf="@+id/btnLogout" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
