--- a/Team_Purple/app/src/main/res/layout/activity_buy_coins_.xml
+++ b/Team_Purple/app/src/main/res/layout/activity_buy_coins_.xml
@@ -56,7 +56,7 @@
         app:layout_constraintStart_toStartOf="@+id/tv_getpremium" />
 
 
-    <ImageButton
+    <ImageView
         android:id="@+id/btn_back"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -65,7 +65,7 @@
         android:src="@drawable/ic_baseline_arrow_back_ios_24"
         android:layout_marginTop="@dimen/dp_15"
         android:layout_marginStart="@dimen/dp_15"/>
-    <ImageButton
+    <ImageView
         android:id="@+id/btn_buy_coin_menu"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
