--- a/Team_Purple/app/src/main/res/layout/activity_main.xml
+++ b/Team_Purple/app/src/main/res/layout/activity_main.xml
@@ -85,8 +85,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="23 Km"
+            android:gravity="center"
             android:elevation="@dimen/dp_16"
             android:textColor="@color/black"
+            android:drawablePadding="@dimen/dp_08"
+            android:drawableStart="@drawable/ic_send24"
             android:background="@drawable/design_bg_edi_text_signupform"
             android:padding="@dimen/dp_08"
             android:layout_margin="@dimen/dp_16" />
@@ -136,31 +139,36 @@
                     android:weightSum="7"
                     android:layout_margin="@dimen/dp_08">
 
-                    <Button
+
+
+                    <ImageView
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="3"
-                        android:backgroundTint="#707070"
-                        android:paddingStart="@dimen/dp_10"
-                        android:drawableLeft="@drawable/ic_baseline_visibility_off_24" />
+                        android:background="#707070"
+                        android:padding="@dimen/dp_10"
+                        android:layout_margin="@dimen/dp_08"
+                        android:src="@drawable/ic_baseline_visibility_off_24"
+                        />
 
-                    <Button
+                    <ImageView
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:backgroundTint="#E9983F"
-                        android:paddingLeft="@dimen/dp_10"
-                        android:paddingRight="@dimen/dp_10"
-                        android:drawableLeft="@drawable/ic_baseline_star_rate_24" />
+                        android:background="#E9983F"
+                        android:padding="@dimen/dp_10"
+                        android:src="@drawable/ic_baseline_star_rate_24"
+                        />
 
-                    <Button
+                    <ImageView
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="3"
-                        android:backgroundTint="@color/primary"
-                        android:paddingLeft="@dimen/dp_10"
-                        android:paddingRight="@dimen/dp_10"
-                        android:drawableLeft="@drawable/ic_baseline_remove_red_eye_24" />
+                        android:background="@color/primary"
+                        android:padding="@dimen/dp_10"
+                        android:layout_margin="@dimen/dp_08"
+                        android:src="@drawable/ic_baseline_favorite_24"
+                        />
 
 
                 </LinearLayout>
