--- a/Team_Purple/app/src/main/res/layout/activity_main.xml
+++ b/Team_Purple/app/src/main/res/layout/activity_main.xml
@@ -62,7 +62,47 @@
         app:layout_constraintTop_toTopOf="parent" />
 
 
+    <LinearLayout
+        android:id="@+id/llradarscan"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/imguserProfile"
+        app:layout_constraintBottom_toTopOf="@id/imgbottomnavsearch"
+        android:layout_margin="@dimen/dp_16"
+        android:orientation="vertical"
+        android:gravity="center"
+        android:elevation="@dimen/dp_10">
+
+
+        <com.airbnb.lottie.LottieAnimationView
+            android:layout_width="300dp"
+            android:layout_height="300dp"
+            android:layout_gravity="center"
+            app:lottie_autoPlay="true"
+            app:lottie_loop="true"
+            app:lottie_rawRes="@raw/radarscan" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Searching Nerby Peoples"
+            android:layout_margin="@dimen/dp_20"
+            android:textStyle="bold"
+            android:textColor="@color/primary"
+            android:textSize="@dimen/sp_15"
+            android:layout_gravity="center"
+            android:gravity="center"
+            />
+
+
+    </LinearLayout>
+
+
+
     <androidx.cardview.widget.CardView
+        android:id="@+id/swipecard"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintStart_toStartOf="parent"
@@ -115,6 +155,7 @@
                     android:orientation="horizontal">
 
                     <TextView
+                        android:id="@+id/tvprofilename"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="Snehal , 23"
@@ -142,6 +183,7 @@
 
 
                     <ImageView
+                        android:id="@+id/imgdisLike"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="3"
@@ -161,6 +203,7 @@
                         />
 
                     <ImageView
+                        android:id="@+id/imgLike"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="3"
